--- a/ccs.css
+++ b/ccs.css
@@ -20,3 +20,23 @@ body{
 .card{
     background-color: lightgrey;
 }
+.gomb{
+    color:white;
+    text-decoration: none;
+    background-color: rgb(150, 139, 139);
+    border-radius: 25px;
+    border: 2px solid rgb(150, 139, 139);
+    padding: 20px;
+    width: 200px;
+    margin-right: 100px;
+    float: right;
+}
+.gomb:hover{
+    background-color: rgb(10, 9, 9);
+}
+.menu{
+    color: white !important;
+}
+.navbar-toggler-icon{
+    filter: invert(1);
+}
