--- a/ccs.css
+++ b/ccs.css
@@ -19,7 +19,17 @@ body{
 }
 .card{
     background-color: lightgrey;
+    width: 100%;
+    height: 250px;
+    margin-right: 50px;
+    transition: ease-in-out 0.25s;
 }
+.card:hover{
+    scale: 110%;
+    border: 5px solid black;
+    background-color:rgb(136, 134, 134);
+}
+
 .gomb{
     color:white;
     text-decoration: none;
@@ -27,14 +37,16 @@ body{
     border-radius: 25px;
     border: 2px solid rgb(150, 139, 139);
     padding: 20px;
+    margin-top: 50px;
     width: 200px;
-    margin-right: 100px;
+    margin-right: 25px;
     float: right;
-    margin-left: 100px;
+    transition: ease-in-out 0.25s;
     margin-bottom: 100px;
 }
 .gomb:hover{
     background-color: rgb(10, 9, 9);
+    scale: 120%;
 }
 .menu{
     color: white !important;
@@ -48,3 +60,25 @@ body{
     margin-left: 20px;
     margin-bottom: 100px;
 }
+.link:hover{
+    color: black !important;
+    transition: ease-in-out 0.1s;
+    scale: 105%;
+    background-color: lightgray;
+    border-radius: 15px;
+}
+.navbarcim{
+    color: white;
+}
+.navbarcim:hover{
+    color: lightgray;
+}
+
+.kepcard{
+    height: 250px !important;
+}
+.kep{
+    width: 100% !important;
+    height: 100% !important;
+    
+}   
