--- a/ccs.css
+++ b/ccs.css
@@ -17,6 +17,10 @@ body{
 #cim{
     font-size: 40px;
 }
+#cim:hover{
+    color: lightgray;
+    
+}
 .card{
     background-color: lightgrey;
     width: 100%;
@@ -81,4 +85,41 @@ body{
     width: 100% !important;
     height: 100% !important;
     
-}   
+}
+.list{
+    color:black;
+    text-decoration: none;
+    background-color: white;
+    border-radius: 25px;
+    border: 5px solid rgb(150, 139, 139);
+    padding: 20px;
+    width: 250px;
+    transition: ease-in-out 0.25s;
+    margin: 25px;
+}
+.list:hover{
+    scale: 120%;
+    color: white;
+    border: 1px solid rgb(150, 139, 139);
+    background-color: rgb(34, 41, 51);
+}
+.szoveg{
+    text-align: justify;
+    border-radius: 25px;
+    border: 5px solid rgb(150, 139, 139);
+    padding: 20px;
+    transition: ease-in-out 0.5s;
+    margin: 50px;
+    width: 80%;
+    background-color: white;
+    color: black;
+}
+.szoveg:hover{
+    scale: 105%;
+    background-color: rgb(34, 41, 51);
+    color: white;
+    border: 1px solid rgb(150, 139, 139);
+}
+.kep1{
+    margin: 25px;
+}
