--- a/ccs.css
+++ b/ccs.css
@@ -27,11 +27,14 @@ body{
     height: 250px;
     margin-right: 50px;
     transition: ease-in-out 0.25s;
+    overflow: hidden;
 }
 .card:hover{
     scale: 110%;
     border: 5px solid black;
     background-color:rgb(136, 134, 134);
+    border-radius: 25px;
+    overflow: hidden;
 }
 
 .gomb{
